# dap

./: .gitignore  .scalafix.conf  .scalafmt.conf  README.md  build.sbt  dbg.txt
.github/workflows/: ci.yml
dap-js-examples/src/main/js/: gossip-model.js  gossip-simulation.mjs  hello.html  hello.mjs  test-socket.mjs
dap-jvm-examples/src/main/scala/dap/examples/: DAPGossip.scala  StochasticChannel.scala  StochasticChannelSimulation.scala
dap-native-examples/: README.md  build.gradle.kts  pyproject.toml  requirements.txt  scripts.py  tasks.py
dap-native-examples/gradle/: libs.versions.toml
dap-native-examples/src/main/c/: Makefile  ctmc  ctmc-2.h  ctmc.c  ctmc.h  dap  dap.h  dap.proto  dap_char2d.h  dap_char2d_utils.c  gossip  gossip.c  gossip.proto  gossip_model.c  gossip_model.h  gossip_simulation.c  style.h
dap-native-examples/src/main/c/distributed/: Makefile  dap.h  gossip.c
dap-native-examples/src/main/c/local/: ctmc.c  dap_char2d.h  dap_char2d_utils.c  gossip.c
dap-native-examples/src/main/python/: build.sh  ctmc.py  dap.h  dap.i  dap.py  dap.swg  dap_wrap.cxx  dap_wrap.h  gossip.py  gossip_model.py  gossip_simulation.py  setup.py  test.py
dap-native-examples/src/main/python/dsl/: __init__.py  ctmc.py  dap.py
dap-native-examples/src/main/python/proto/: gossip.proto
dap-native-examples/src/main/python/utils/: __init__.py  grids.py
dap/native/src/main/resources/: dap.h
dap/native/src/main/scala/dap/: BasicNativeCTMCApi.scala  CUtils.scala  NativeCTMCApi.scala  NativeCTMCBaseApi.scala  NativeDAPApi.scala  (+2 more)
docs/: design.md
docs/diagrams/: architecture.drawio  scafi-3-mp-api.puml  sketched-architecture.HEIC
experiments/native/src/main/python-ffi/: pyproject.toml
experiments/native/src/main/python-ffi/python_ffi/: state.py
experiments/native/src/main/rust/: Cargo.toml  build.rs
experiments/src/main/scala/: PingPonger.scala  SerDe.scala
native/src/main/c/libadvcounter/: Makefile  main.c
native/src/main/c/libcounter/: Makefile  libcounter.h
native/src/main/scala/experiments/: libadvcounter.scala
project/: plugins.sbt
shared/src/main/scala/experiments/: Counter.scala
(+153 files in other folders)
