[project]
name = "python-ffi"
version = "0.1.0"
description = ""
authors = [
    {name = "Luca Tassinari",email = "luca.tassinari.2000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cffi (>=1.17.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
